--- a/env.example
+++ b/env.example
@@ -1,7 +1,11 @@
 # Supabase
+DATABASE_URL=your_supabase_url_for_database_connection
+
 NEXT_PUBLIC_SUPABASE_URL=your_supabase_url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
 
+# JWT Secret for authentication
+JWT_SECRET=your-jwt-secret-here
 
 # App
 NEXT_PUBLIC_APP_URL=http://localhost:3000
