--- a/env.example
+++ b/env.example
@@ -3,6 +3,7 @@ DATABASE_URL=your_supabase_url_for_database_connection
 
 NEXT_PUBLIC_SUPABASE_URL=your_supabase_url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
+SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
 
 # JWT Secret for authentication
 JWT_SECRET=your-jwt-secret-here
